fdo#86615: Track dependent formulas after bulk-broadcasting...

of group area listeners.

Change-Id: I3a8d2ceb57462c2c2c4cddb6e34966d2465e149b